--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Tue Nov 13 11:05:02 2018</p>
+         Last Run: Tue Nov 13 12:05:06 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">Practice - SWU Complex</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Wednesday Nov 14, 2018 -  9:15PM til 10:45PM</H4>
                <table class="table table-striped">
@@ -33,24 +33,24 @@
                         <td>Clear</td>
                         <td>1</td>
                         <td>-4</td>
-                        <td>3</td>
-                        <td>67</td>
+                        <td>2</td>
+                        <td>69</td>
                         <td>0</td>
-                        <td>18</td>
-                        <td>WNW</td>
-                        <td>3</td>
+                        <td>19</td>
+                        <td>W</td>
+                        <td>1</td>
                      </tr>
                      <tr>
                         <td>10:00 PM</td>
                         <td>Clear</td>
-                        <td>1</td>
-                        <td>-3</td>
-                        <td>3</td>
-                        <td>68</td>
                         <td>0</td>
-                        <td>16</td>
-                        <td>W</td>
+                        <td>-5</td>
                         <td>3</td>
+                        <td>70</td>
+                        <td>0</td>
+                        <td>18</td>
+                        <td>W</td>
+                        <td>1</td>
                      </tr>
                      <tr>
                         <td>11:00 PM</td>
@@ -62,7 +62,7 @@
                         <td>0</td>
                         <td>13</td>
                         <td>W</td>
-                        <td>6</td>
+                        <td>3</td>
                      </tr>
                   </tbody>
                </table>
@@ -90,7 +90,7 @@
                "backgroundColor":"rgba(92,0,141,0)",
                "data":[
                  "-4",
-                 "-3",
+                 "-5",
                  "-4"
                ]
              },
@@ -102,7 +102,7 @@
                "backgroundColor":"rgba(252,49,18,0)",
                "data":[
                  "1",
-                 "1",
+                 "0",
                  "0"
                ]
              }
@@ -160,7 +160,7 @@
                "borderWidth":2,
                "backgroundColor":"rgba(0,0,255,0.5)",
                "data":[
-                 "3",
+                 "2",
                  "3",
                  "3"
                ]
@@ -171,8 +171,8 @@
                "borderWidth":2,
                "backgroundColor":"rgba(40,177,255,0.5)",
                "data":[
-                 "67",
-                 "68",
+                 "69",
+                 "70",
                  "71"
                ]
              },
@@ -182,9 +182,9 @@
                "borderWidth":2,
                "backgroundColor":"rgba(233,37,255,0.5)",
                "data":[
-                 "3",
-                 "3",
-                 "6"
+                 "1",
+                 "1",
+                 "3"
                ]
              }
            ]
@@ -224,7 +224,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Tue Nov 13 11:05:02 2018</p>
+         Last Run: Tue Nov 13 12:05:06 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">Game vs. SWU Premiers - Foothills Telus Field</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Saturday Nov 17, 2018 -  9:30AM til 10:30AM</H4>
                <table class="table table-striped">
@@ -246,10 +246,10 @@
                      <tr>
                         <td>08:00 AM</td>
                         <td>Clear</td>
-                        <td>-11</td>
-                        <td>-15</td>
+                        <td>-12</td>
+                        <td>-16</td>
                         <td>5</td>
-                        <td>84</td>
+                        <td>85</td>
                         <td>0</td>
                         <td>6</td>
                         <td>SW</td>
@@ -258,12 +258,12 @@
                      <tr>
                         <td>09:00 AM</td>
                         <td>Clear</td>
-                        <td>-9</td>
-                        <td>-13</td>
+                        <td>-10</td>
+                        <td>-14</td>
                         <td>4</td>
-                        <td>78</td>
+                        <td>79</td>
                         <td>0</td>
-                        <td>8</td>
+                        <td>6</td>
                         <td>SW</td>
                         <td>1</td>
                      </tr>
@@ -272,8 +272,8 @@
                         <td>Clear</td>
                         <td>-7</td>
                         <td>-11</td>
-                        <td>2</td>
-                        <td>71</td>
+                        <td>3</td>
+                        <td>73</td>
                         <td>0</td>
                         <td>8</td>
                         <td>SW</td>
@@ -284,8 +284,8 @@
                         <td>Clear</td>
                         <td>-4</td>
                         <td>-8</td>
-                        <td>2</td>
-                        <td>63</td>
+                        <td>3</td>
+                        <td>65</td>
                         <td>1</td>
                         <td>10</td>
                         <td>SW</td>
@@ -317,8 +317,8 @@
                "pointColor":"rgba(92,0,141,1)",
                "backgroundColor":"rgba(92,0,141,0)",
                "data":[
-                 "-15",
-                 "-13",
+                 "-16",
+                 "-14",
                  "-11",
                  "-8"
                ]
@@ -330,8 +330,8 @@
                "pointColor":"rgba(252,49,18,1)",
                "backgroundColor":"rgba(252,49,18,0)",
                "data":[
-                 "-11",
-                 "-9",
+                 "-12",
+                 "-10",
                  "-7",
                  "-4"
                ]
@@ -393,8 +393,8 @@
                "data":[
                  "5",
                  "4",
-                 "2",
-                 "2"
+                 "3",
+                 "3"
                ]
              },
              {
@@ -403,10 +403,10 @@
                "borderWidth":2,
                "backgroundColor":"rgba(40,177,255,0.5)",
                "data":[
-                 "84",
-                 "78",
-                 "71",
-                 "63"
+                 "85",
+                 "79",
+                 "73",
+                 "65"
                ]
              },
              {
@@ -458,7 +458,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Tue Nov 13 11:05:02 2018</p>
+         Last Run: Tue Nov 13 12:05:06 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">Academy - SWU Complex</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Sunday Nov 18, 2018 - 12:30PM til  2:00PM</H4>
                <table class="table table-striped">
@@ -479,39 +479,39 @@
                   <tbody>
                      <tr>
                         <td>12:00 PM</td>
-                        <td>Partly Cloudy</td>
-                        <td>2</td>
-                        <td>-2</td>
+                        <td>Clear</td>
                         <td>1</td>
-                        <td>54</td>
+                        <td>-3</td>
+                        <td>2</td>
+                        <td>55</td>
                         <td>1</td>
                         <td>14</td>
                         <td>W</td>
-                        <td>36</td>
+                        <td>19</td>
                      </tr>
                      <tr>
                         <td>01:00 PM</td>
-                        <td>Partly Cloudy</td>
-                        <td>3</td>
-                        <td>-1</td>
+                        <td>Clear</td>
+                        <td>2</td>
+                        <td>-2</td>
+                        <td>2</td>
+                        <td>52</td>
                         <td>1</td>
-                        <td>51</td>
-                        <td>1</td>
-                        <td>16</td>
+                        <td>14</td>
                         <td>W</td>
-                        <td>35</td>
+                        <td>19</td>
                      </tr>
                      <tr>
                         <td>02:00 PM</td>
-                        <td>Partly Cloudy</td>
-                        <td>4</td>
-                        <td>1</td>
+                        <td>Clear</td>
+                        <td>3</td>
+                        <td>0</td>
                         <td>2</td>
-                        <td>48</td>
+                        <td>49</td>
                         <td>1</td>
-                        <td>14</td>
-                        <td>WNW</td>
-                        <td>34</td>
+                        <td>13</td>
+                        <td>W</td>
+                        <td>21</td>
                      </tr>
                   </tbody>
                </table>
@@ -538,9 +538,9 @@
                "pointColor":"rgba(92,0,141,1)",
                "backgroundColor":"rgba(92,0,141,0)",
                "data":[
+                 "-3",
                  "-2",
-                 "-1",
-                 "1"
+                 "0"
                ]
              },
              {
@@ -550,9 +550,9 @@
                "pointColor":"rgba(252,49,18,1)",
                "backgroundColor":"rgba(252,49,18,0)",
                "data":[
+                 "1",
                  "2",
-                 "3",
-                 "4"
+                 "3"
                ]
              }
            ]
@@ -609,8 +609,8 @@
                "borderWidth":2,
                "backgroundColor":"rgba(0,0,255,0.5)",
                "data":[
-                 "1",
-                 "1",
+                 "2",
+                 "2",
                  "2"
                ]
              },
@@ -620,9 +620,9 @@
                "borderWidth":2,
                "backgroundColor":"rgba(40,177,255,0.5)",
                "data":[
-                 "54",
-                 "51",
-                 "48"
+                 "55",
+                 "52",
+                 "49"
                ]
              },
              {
@@ -631,9 +631,9 @@
                "borderWidth":2,
                "backgroundColor":"rgba(233,37,255,0.5)",
                "data":[
-                 "36",
-                 "35",
-                 "34"
+                 "19",
+                 "19",
+                 "21"
                ]
              }
            ]
@@ -673,7 +673,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Tue Nov 13 11:05:02 2018</p>
+         Last Run: Tue Nov 13 12:05:06 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">Academy - SWU Complex</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Monday Nov 19, 2018 -  9:15PM til 10:45PM</H4>
                <table class="table table-striped">
@@ -697,36 +697,36 @@
                         <td>Partly Cloudy</td>
                         <td>-2</td>
                         <td>-6</td>
-                        <td>1</td>
-                        <td>64</td>
+                        <td>2</td>
+                        <td>68</td>
                         <td>0</td>
                         <td>11</td>
                         <td>W</td>
-                        <td>38</td>
+                        <td>46</td>
                      </tr>
                      <tr>
                         <td>10:00 PM</td>
                         <td>Partly Cloudy</td>
-                        <td>-2</td>
-                        <td>-6</td>
-                        <td>1</td>
-                        <td>64</td>
+                        <td>-3</td>
+                        <td>-7</td>
+                        <td>2</td>
+                        <td>68</td>
                         <td>0</td>
                         <td>11</td>
-                        <td>W</td>
-                        <td>36</td>
+                        <td>WSW</td>
+                        <td>46</td>
                      </tr>
                      <tr>
                         <td>11:00 PM</td>
                         <td>Partly Cloudy</td>
                         <td>-3</td>
                         <td>-7</td>
-                        <td>1</td>
-                        <td>65</td>
+                        <td>2</td>
+                        <td>69</td>
                         <td>0</td>
                         <td>11</td>
                         <td>WSW</td>
-                        <td>34</td>
+                        <td>46</td>
                      </tr>
                   </tbody>
                </table>
@@ -754,7 +754,7 @@
                "backgroundColor":"rgba(92,0,141,0)",
                "data":[
                  "-6",
-                 "-6",
+                 "-7",
                  "-7"
                ]
              },
@@ -766,7 +766,7 @@
                "backgroundColor":"rgba(252,49,18,0)",
                "data":[
                  "-2",
-                 "-2",
+                 "-3",
                  "-3"
                ]
              }
@@ -824,9 +824,9 @@
                "borderWidth":2,
                "backgroundColor":"rgba(0,0,255,0.5)",
                "data":[
-                 "1",
-                 "1",
-                 "1"
+                 "2",
+                 "2",
+                 "2"
                ]
              },
              {
@@ -835,9 +835,9 @@
                "borderWidth":2,
                "backgroundColor":"rgba(40,177,255,0.5)",
                "data":[
-                 "64",
-                 "64",
-                 "65"
+                 "68",
+                 "68",
+                 "69"
                ]
              },
              {
@@ -846,9 +846,9 @@
                "borderWidth":2,
                "backgroundColor":"rgba(233,37,255,0.5)",
                "data":[
-                 "38",
-                 "36",
-                 "34"
+                 "46",
+                 "46",
+                 "46"
                ]
              }
            ]
