--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Tue Nov 13 12:05:06 2018</p>
+         Last Run: Tue Nov 13 13:05:04 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">Practice - SWU Complex</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Wednesday Nov 14, 2018 -  9:15PM til 10:45PM</H4>
                <table class="table table-striped">
@@ -37,18 +37,18 @@
                         <td>69</td>
                         <td>0</td>
                         <td>19</td>
-                        <td>W</td>
+                        <td>WNW</td>
                         <td>1</td>
                      </tr>
                      <tr>
                         <td>10:00 PM</td>
                         <td>Clear</td>
-                        <td>0</td>
-                        <td>-5</td>
+                        <td>1</td>
+                        <td>-3</td>
                         <td>3</td>
-                        <td>70</td>
+                        <td>69</td>
                         <td>0</td>
-                        <td>18</td>
+                        <td>16</td>
                         <td>W</td>
                         <td>1</td>
                      </tr>
@@ -90,7 +90,7 @@
                "backgroundColor":"rgba(92,0,141,0)",
                "data":[
                  "-4",
-                 "-5",
+                 "-3",
                  "-4"
                ]
              },
@@ -102,7 +102,7 @@
                "backgroundColor":"rgba(252,49,18,0)",
                "data":[
                  "1",
-                 "0",
+                 "1",
                  "0"
                ]
              }
@@ -172,7 +172,7 @@
                "backgroundColor":"rgba(40,177,255,0.5)",
                "data":[
                  "69",
-                 "70",
+                 "69",
                  "71"
                ]
              },
@@ -224,7 +224,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Tue Nov 13 12:05:06 2018</p>
+         Last Run: Tue Nov 13 13:05:04 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">Game vs. SWU Premiers - Foothills Telus Field</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Saturday Nov 17, 2018 -  9:30AM til 10:30AM</H4>
                <table class="table table-striped">
@@ -249,7 +249,7 @@
                         <td>-12</td>
                         <td>-16</td>
                         <td>5</td>
-                        <td>85</td>
+                        <td>81</td>
                         <td>0</td>
                         <td>6</td>
                         <td>SW</td>
@@ -261,7 +261,7 @@
                         <td>-10</td>
                         <td>-14</td>
                         <td>4</td>
-                        <td>79</td>
+                        <td>76</td>
                         <td>0</td>
                         <td>6</td>
                         <td>SW</td>
@@ -273,7 +273,7 @@
                         <td>-7</td>
                         <td>-11</td>
                         <td>3</td>
-                        <td>73</td>
+                        <td>70</td>
                         <td>0</td>
                         <td>8</td>
                         <td>SW</td>
@@ -282,14 +282,14 @@
                      <tr>
                         <td>11:00 AM</td>
                         <td>Clear</td>
-                        <td>-4</td>
-                        <td>-8</td>
+                        <td>-5</td>
+                        <td>-9</td>
                         <td>3</td>
-                        <td>65</td>
+                        <td>64</td>
                         <td>1</td>
-                        <td>10</td>
+                        <td>8</td>
                         <td>SW</td>
-                        <td>3</td>
+                        <td>2</td>
                      </tr>
                   </tbody>
                </table>
@@ -320,7 +320,7 @@
                  "-16",
                  "-14",
                  "-11",
-                 "-8"
+                 "-9"
                ]
              },
              {
@@ -333,7 +333,7 @@
                  "-12",
                  "-10",
                  "-7",
-                 "-4"
+                 "-5"
                ]
              }
            ]
@@ -403,10 +403,10 @@
                "borderWidth":2,
                "backgroundColor":"rgba(40,177,255,0.5)",
                "data":[
-                 "85",
-                 "79",
-                 "73",
-                 "65"
+                 "81",
+                 "76",
+                 "70",
+                 "64"
                ]
              },
              {
@@ -418,7 +418,7 @@
                  "1",
                  "1",
                  "2",
-                 "3"
+                 "2"
                ]
              }
            ]
@@ -458,7 +458,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Tue Nov 13 12:05:06 2018</p>
+         Last Run: Tue Nov 13 13:05:04 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">Academy - SWU Complex</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Sunday Nov 18, 2018 - 12:30PM til  2:00PM</H4>
                <table class="table table-striped">
@@ -480,14 +480,14 @@
                      <tr>
                         <td>12:00 PM</td>
                         <td>Clear</td>
-                        <td>1</td>
-                        <td>-3</td>
+                        <td>0</td>
+                        <td>-4</td>
                         <td>2</td>
-                        <td>55</td>
+                        <td>56</td>
                         <td>1</td>
-                        <td>14</td>
+                        <td>13</td>
                         <td>W</td>
-                        <td>19</td>
+                        <td>18</td>
                      </tr>
                      <tr>
                         <td>01:00 PM</td>
@@ -495,23 +495,23 @@
                         <td>2</td>
                         <td>-2</td>
                         <td>2</td>
-                        <td>52</td>
+                        <td>53</td>
                         <td>1</td>
-                        <td>14</td>
+                        <td>13</td>
                         <td>W</td>
                         <td>19</td>
                      </tr>
                      <tr>
                         <td>02:00 PM</td>
                         <td>Clear</td>
-                        <td>3</td>
-                        <td>0</td>
+                        <td>2</td>
+                        <td>-2</td>
                         <td>2</td>
                         <td>49</td>
                         <td>1</td>
                         <td>13</td>
                         <td>W</td>
-                        <td>21</td>
+                        <td>20</td>
                      </tr>
                   </tbody>
                </table>
@@ -538,9 +538,9 @@
                "pointColor":"rgba(92,0,141,1)",
                "backgroundColor":"rgba(92,0,141,0)",
                "data":[
-                 "-3",
+                 "-4",
                  "-2",
-                 "0"
+                 "-2"
                ]
              },
              {
@@ -550,9 +550,9 @@
                "pointColor":"rgba(252,49,18,1)",
                "backgroundColor":"rgba(252,49,18,0)",
                "data":[
-                 "1",
+                 "0",
                  "2",
-                 "3"
+                 "2"
                ]
              }
            ]
@@ -620,8 +620,8 @@
                "borderWidth":2,
                "backgroundColor":"rgba(40,177,255,0.5)",
                "data":[
-                 "55",
-                 "52",
+                 "56",
+                 "53",
                  "49"
                ]
              },
@@ -631,9 +631,9 @@
                "borderWidth":2,
                "backgroundColor":"rgba(233,37,255,0.5)",
                "data":[
+                 "18",
                  "19",
-                 "19",
-                 "21"
+                 "20"
                ]
              }
            ]
@@ -673,7 +673,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Tue Nov 13 12:05:06 2018</p>
+         Last Run: Tue Nov 13 13:05:04 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">Academy - SWU Complex</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Monday Nov 19, 2018 -  9:15PM til 10:45PM</H4>
                <table class="table table-striped">
@@ -702,19 +702,19 @@
                         <td>0</td>
                         <td>11</td>
                         <td>W</td>
-                        <td>46</td>
+                        <td>49</td>
                      </tr>
                      <tr>
                         <td>10:00 PM</td>
                         <td>Partly Cloudy</td>
-                        <td>-3</td>
-                        <td>-7</td>
+                        <td>-2</td>
+                        <td>-6</td>
                         <td>2</td>
                         <td>68</td>
                         <td>0</td>
                         <td>11</td>
-                        <td>WSW</td>
-                        <td>46</td>
+                        <td>W</td>
+                        <td>48</td>
                      </tr>
                      <tr>
                         <td>11:00 PM</td>
@@ -726,7 +726,7 @@
                         <td>0</td>
                         <td>11</td>
                         <td>WSW</td>
-                        <td>46</td>
+                        <td>48</td>
                      </tr>
                   </tbody>
                </table>
@@ -754,7 +754,7 @@
                "backgroundColor":"rgba(92,0,141,0)",
                "data":[
                  "-6",
-                 "-7",
+                 "-6",
                  "-7"
                ]
              },
@@ -766,7 +766,7 @@
                "backgroundColor":"rgba(252,49,18,0)",
                "data":[
                  "-2",
-                 "-3",
+                 "-2",
                  "-3"
                ]
              }
@@ -846,9 +846,9 @@
                "borderWidth":2,
                "backgroundColor":"rgba(233,37,255,0.5)",
                "data":[
-                 "46",
-                 "46",
-                 "46"
+                 "49",
+                 "48",
+                 "48"
                ]
              }
            ]
