--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Tue Nov 13 13:05:04 2018</p>
+         Last Run: Tue Nov 13 14:05:05 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">Practice - SWU Complex</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Wednesday Nov 14, 2018 -  9:15PM til 10:45PM</H4>
                <table class="table table-striped">
@@ -31,12 +31,12 @@
                      <tr>
                         <td>09:00 PM</td>
                         <td>Clear</td>
-                        <td>1</td>
-                        <td>-4</td>
                         <td>2</td>
-                        <td>69</td>
+                        <td>-3</td>
+                        <td>2</td>
+                        <td>64</td>
                         <td>0</td>
-                        <td>19</td>
+                        <td>21</td>
                         <td>WNW</td>
                         <td>1</td>
                      </tr>
@@ -44,12 +44,12 @@
                         <td>10:00 PM</td>
                         <td>Clear</td>
                         <td>1</td>
-                        <td>-3</td>
-                        <td>3</td>
-                        <td>69</td>
+                        <td>-4</td>
+                        <td>2</td>
+                        <td>66</td>
                         <td>0</td>
-                        <td>16</td>
-                        <td>W</td>
+                        <td>18</td>
+                        <td>WNW</td>
                         <td>1</td>
                      </tr>
                      <tr>
@@ -58,7 +58,7 @@
                         <td>0</td>
                         <td>-4</td>
                         <td>3</td>
-                        <td>71</td>
+                        <td>70</td>
                         <td>0</td>
                         <td>13</td>
                         <td>W</td>
@@ -89,8 +89,8 @@
                "pointColor":"rgba(92,0,141,1)",
                "backgroundColor":"rgba(92,0,141,0)",
                "data":[
-                 "-4",
                  "-3",
+                 "-4",
                  "-4"
                ]
              },
@@ -101,7 +101,7 @@
                "pointColor":"rgba(252,49,18,1)",
                "backgroundColor":"rgba(252,49,18,0)",
                "data":[
-                 "1",
+                 "2",
                  "1",
                  "0"
                ]
@@ -161,7 +161,7 @@
                "backgroundColor":"rgba(0,0,255,0.5)",
                "data":[
                  "2",
-                 "3",
+                 "2",
                  "3"
                ]
              },
@@ -171,9 +171,9 @@
                "borderWidth":2,
                "backgroundColor":"rgba(40,177,255,0.5)",
                "data":[
-                 "69",
-                 "69",
-                 "71"
+                 "64",
+                 "66",
+                 "70"
                ]
              },
              {
@@ -224,7 +224,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Tue Nov 13 13:05:04 2018</p>
+         Last Run: Tue Nov 13 14:05:05 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">Game vs. SWU Premiers - Foothills Telus Field</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Saturday Nov 17, 2018 -  9:30AM til 10:30AM</H4>
                <table class="table table-striped">
@@ -246,10 +246,10 @@
                      <tr>
                         <td>08:00 AM</td>
                         <td>Clear</td>
-                        <td>-12</td>
-                        <td>-16</td>
-                        <td>5</td>
-                        <td>81</td>
+                        <td>-13</td>
+                        <td>-17</td>
+                        <td>6</td>
+                        <td>85</td>
                         <td>0</td>
                         <td>6</td>
                         <td>SW</td>
@@ -258,10 +258,10 @@
                      <tr>
                         <td>09:00 AM</td>
                         <td>Clear</td>
-                        <td>-10</td>
-                        <td>-14</td>
-                        <td>4</td>
-                        <td>76</td>
+                        <td>-11</td>
+                        <td>-15</td>
+                        <td>6</td>
+                        <td>81</td>
                         <td>0</td>
                         <td>6</td>
                         <td>SW</td>
@@ -270,26 +270,26 @@
                      <tr>
                         <td>10:00 AM</td>
                         <td>Clear</td>
-                        <td>-7</td>
-                        <td>-11</td>
-                        <td>3</td>
-                        <td>70</td>
+                        <td>-8</td>
+                        <td>-12</td>
+                        <td>5</td>
+                        <td>73</td>
                         <td>0</td>
                         <td>8</td>
-                        <td>SW</td>
-                        <td>2</td>
+                        <td>WSW</td>
+                        <td>1</td>
                      </tr>
                      <tr>
                         <td>11:00 AM</td>
                         <td>Clear</td>
                         <td>-5</td>
                         <td>-9</td>
-                        <td>3</td>
+                        <td>4</td>
                         <td>64</td>
                         <td>1</td>
                         <td>8</td>
-                        <td>SW</td>
-                        <td>2</td>
+                        <td>WSW</td>
+                        <td>1</td>
                      </tr>
                   </tbody>
                </table>
@@ -317,9 +317,9 @@
                "pointColor":"rgba(92,0,141,1)",
                "backgroundColor":"rgba(92,0,141,0)",
                "data":[
-                 "-16",
-                 "-14",
-                 "-11",
+                 "-17",
+                 "-15",
+                 "-12",
                  "-9"
                ]
              },
@@ -330,9 +330,9 @@
                "pointColor":"rgba(252,49,18,1)",
                "backgroundColor":"rgba(252,49,18,0)",
                "data":[
-                 "-12",
-                 "-10",
-                 "-7",
+                 "-13",
+                 "-11",
+                 "-8",
                  "-5"
                ]
              }
@@ -391,10 +391,10 @@
                "borderWidth":2,
                "backgroundColor":"rgba(0,0,255,0.5)",
                "data":[
+                 "6",
+                 "6",
                  "5",
-                 "4",
-                 "3",
-                 "3"
+                 "4"
                ]
              },
              {
@@ -403,9 +403,9 @@
                "borderWidth":2,
                "backgroundColor":"rgba(40,177,255,0.5)",
                "data":[
+                 "85",
                  "81",
-                 "76",
-                 "70",
+                 "73",
                  "64"
                ]
              },
@@ -417,8 +417,8 @@
                "data":[
                  "1",
                  "1",
-                 "2",
-                 "2"
+                 "1",
+                 "1"
                ]
              }
            ]
@@ -458,7 +458,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Tue Nov 13 13:05:04 2018</p>
+         Last Run: Tue Nov 13 14:05:05 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">Academy - SWU Complex</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Sunday Nov 18, 2018 - 12:30PM til  2:00PM</H4>
                <table class="table table-striped">
@@ -485,9 +485,9 @@
                         <td>2</td>
                         <td>56</td>
                         <td>1</td>
-                        <td>13</td>
+                        <td>14</td>
                         <td>W</td>
-                        <td>18</td>
+                        <td>20</td>
                      </tr>
                      <tr>
                         <td>01:00 PM</td>
@@ -495,9 +495,9 @@
                         <td>2</td>
                         <td>-2</td>
                         <td>2</td>
-                        <td>53</td>
+                        <td>52</td>
                         <td>1</td>
-                        <td>13</td>
+                        <td>14</td>
                         <td>W</td>
                         <td>19</td>
                      </tr>
@@ -511,7 +511,7 @@
                         <td>1</td>
                         <td>13</td>
                         <td>W</td>
-                        <td>20</td>
+                        <td>19</td>
                      </tr>
                   </tbody>
                </table>
@@ -621,7 +621,7 @@
                "backgroundColor":"rgba(40,177,255,0.5)",
                "data":[
                  "56",
-                 "53",
+                 "52",
                  "49"
                ]
              },
@@ -631,9 +631,9 @@
                "borderWidth":2,
                "backgroundColor":"rgba(233,37,255,0.5)",
                "data":[
-                 "18",
+                 "20",
                  "19",
-                 "20"
+                 "19"
                ]
              }
            ]
@@ -673,7 +673,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Tue Nov 13 13:05:04 2018</p>
+         Last Run: Tue Nov 13 14:05:05 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">Academy - SWU Complex</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Monday Nov 19, 2018 -  9:15PM til 10:45PM</H4>
                <table class="table table-striped">
@@ -698,7 +698,7 @@
                         <td>-2</td>
                         <td>-6</td>
                         <td>2</td>
-                        <td>68</td>
+                        <td>67</td>
                         <td>0</td>
                         <td>11</td>
                         <td>W</td>
@@ -722,10 +722,10 @@
                         <td>-3</td>
                         <td>-7</td>
                         <td>2</td>
-                        <td>69</td>
+                        <td>68</td>
                         <td>0</td>
                         <td>11</td>
-                        <td>WSW</td>
+                        <td>W</td>
                         <td>48</td>
                      </tr>
                   </tbody>
@@ -835,9 +835,9 @@
                "borderWidth":2,
                "backgroundColor":"rgba(40,177,255,0.5)",
                "data":[
+                 "67",
                  "68",
-                 "68",
-                 "69"
+                 "68"
                ]
              },
              {
